Improve SfM initialization with robust feature detection and error handling. Add sample video downloader.

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,16 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Project specific
+# Test results and data
+results/
+data/
+*.jpg
+*.png
+*.mp4
+*.npy
+
+# IDE specific
+.vscode/
+.idea/
