Add platform-independent rosbag reader for data loading
- Implement rosbag reading using the rosbags library without requiring ROS installation
- Add support for both ROS1 and ROS2 bag formats
- Handle image, IMU, and wheel encoder data extraction
- Add test script for verifying functionality
- Include documentation for the implementation

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ scipy>=1.7.0
 pyyaml>=6.0
 opencv-python>=4.5.0
 matplotlib>=3.5.0
+# Platform-independent rosbag reader
+rosbags>=0.9.15
 # Uncomment when ready to use GTSAM
 # gtsam>=4.1.0
