Update rosbag reader to handle specific message formats
- Add support for platform-independent rosbag reading using the rosbags library
- Update IMU data extraction to handle MLAImu message format with info.imu_data_basic fields
- Update wheel encoder data extraction to handle WheelReport message format with wheel_position_report_data
- Add H.264 video decoding support using PyAV (needs further testing)
- Improve error handling and fallback mechanisms

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ opencv-python>=4.5.0
 matplotlib>=3.5.0
 # Platform-independent rosbag reader
 rosbags>=0.9.15
+# Video decoding for H.264
+av>=10.0.0
 # Uncomment when ready to use GTSAM
 # gtsam>=4.1.0
