Complete T5.2: Implement validation tools with interactive visualization and fix extract_optimized_values function

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,7 @@ matplotlib>=3.5.0
 rosbags>=0.9.15
 # Video decoding for H.264
 av>=10.0.0
+# Interactive 3D visualization
+plotly>=6.0.0
 # Uncomment when ready to use GTSAM
 # gtsam>=4.1.0
